tooling/nargo_cli/tests/snapshots/compile_failure/comptime_static_assert_failure/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: static_assert failed: x != 4
  ┌─ src/main.nr:4:5
  │
4 │     static_assert(x == 4, "x != 4");
  │     ------------------------------- Assertion failed
  │
  = Call stack:
    1: main
            at src/main.nr:10:23
    2: foo
            at src/main.nr:4:5

Aborting due to 1 previous error
